Innitial uncommited changes

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -363,7 +363,7 @@
       "deliiver_time_text_1": "Estimated delivery time",
       "deliiver_time_text_2": "days",
       "sticky_timer_text": "Price will be expire in: ",
-      "subscribe": "Add to cart!"
+      "subscribe": "Add to cart"
     },
     "dynamic_checkout_buttons": {
       "add_to_cart_text_when_dynamic_checkout_buttons_enable": "Add to cart"
