--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1569,46 +1569,46 @@
   "pagefly": {
     "products": {
       "product": {
-        "regular_price": "通常価格",
-        "sold_out": "売り切れ",
-        "unavailable": "利用不可",
-        "on_sale": "セール",
-        "quantity": "量",
-        "add_to_cart": "を追加することができます。",
-        "back_to_collection": "戻る {{ title }}",
-        "view_details": "詳細を見る"
+        "regular_price": "Regular price",
+        "sold_out": "Sold out",
+        "unavailable": "Unavailable",
+        "on_sale": "Sale",
+        "quantity": "Quantity",
+        "add_to_cart": "Add to cart",
+        "back_to_collection": "Back to {{ title }}",
+        "view_details": "View details"
       }
     },
     "article": {
-      "tags": "タグ：",
-      "all_topics": "すべてのトピック",
-      "by_author": "沿って {{ author }}",
-      "posted_in": "で掲示されます",
-      "read_more": "もっと読む",
-      "back_to_blog": "戻る {{ title }}"
+      "tags": "Tags:",
+      "all_topics": "All topics",
+      "by_author": "by {{ author }}",
+      "posted_in": "Posted in",
+      "read_more": "Read more",
+      "back_to_blog": "Back to {{ title }}"
     },
     "comments": {
-      "title": "コメントを残す",
-      "name": "名前",
-      "email": "メール",
-      "message": "メッセージ",
-      "post": "ポストコメント",
-      "moderated": "コメントは公開する前に承認する必要があることに注意してください",
-      "success_moderated": "コメントは正常に投稿されました。ブログがモデレートされているので、しばらくして公開します。",
-      "success": "コメントが正常に投稿されました。ありがとうございました！",
+      "title": "Leave a comment",
+      "name": "Name",
+      "email": "Email",
+      "message": "Message",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
       "comments_with_count": {
-        "one": "{{ count }} コメント",
-        "other": "{{ count }} コメント"
+        "one": "{{ count }} comment",
+        "other": "{{ count }} comments"
       }
     },
     "password_page": {
-      "login_form_message": "パスワードを使用してストアに入る：",
-      "login_form_password_label": "パスワード",
-      "login_form_password_placeholder": "パスワード",
-      "login_form_submit": "入",
-      "signup_form_email_label": "メール",
-      "signup_form_success": "開店直前にメールをお送りします！",
-      "password_link": "パスワードを使用して入力"
+      "login_form_message": "Enter store using password:",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_submit": "Enter",
+      "signup_form_email_label": "Email",
+      "signup_form_success": "We will send you an email right before we open!",
+      "password_link": "Enter using password"
     }
   }
 }
