--- a/locales/da.json
+++ b/locales/da.json
@@ -1,5 +1,10 @@
 {
   "general": {
+    "404": {
+      "title": "404 side ikke fundet",
+      "subtext": "Den ønskede side findes ikke.",
+      "link": "Fortsætte med at handle"
+    },
     "accessibility": {
       "skip_to_content": "Spring til indhold",
       "close_modal": "Luk (esc)"
@@ -7,11 +12,6 @@
     "meta": {
       "tags": "Mærket \"{{tags}}\"",
       "page": "Side {{ page }}"
-    },
-    "404": {
-      "title": "404 side ikke fundet",
-      "subtext": "Den ønskede side findes ikke.",
-      "link": "Fortsætte med at handle"
     },
     "pagination": {
       "previous": "Tidligere",
@@ -403,5 +403,50 @@
   },
   "consistent_cart_addon": {
     "merge_cart_text": "It seems you already have a cart from a previous session. Would you like to merge your previous cart with your current cart?"
+  },
+  "pagefly": {
+    "products": {
+      "product": {
+        "regular_price": "Regular price",
+        "sold_out": "Sold out",
+        "unavailable": "Unavailable",
+        "on_sale": "Sale",
+        "quantity": "Quantity",
+        "add_to_cart": "Add to cart",
+        "back_to_collection": "Back to {{ title }}",
+        "view_details": "View details"
+      }
+    },
+    "article": {
+      "tags": "Tags:",
+      "all_topics": "All topics",
+      "by_author": "by {{ author }}",
+      "posted_in": "Posted in",
+      "read_more": "Read more",
+      "back_to_blog": "Back to {{ title }}"
+    },
+    "comments": {
+      "title": "Leave a comment",
+      "name": "Name",
+      "email": "Email",
+      "message": "Message",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
+      "comments_with_count": {
+        "one": "{{ count }} comment",
+        "other": "{{ count }} comments"
+      }
+    },
+    "password_page": {
+      "login_form_message": "Enter store using password:",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_submit": "Enter",
+      "signup_form_email_label": "Email",
+      "signup_form_success": "We will send you an email right before we open!",
+      "password_link": "Enter using password"
+    }
   }
 }
