--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -392,7 +392,9 @@
         "paypal": {
           "connect": "Clique para ligar à sua conta do PayPal",
           "account_connected": "Conta ligada"
-        }
+        },
+        "subscription_agreement_label": "Compreendo que estou a concordar com uma subscrição. Ela será renovada de acordo com o preço e a frequência listados até que termine ou seja %{cancelled}.",
+        "subscription_agreement_cancelled": "cancelada"
       },
       "payment_summary": {
         "gift_card_current_balance_notice": "Saldo atual %{amount}",
@@ -1127,6 +1129,13 @@
       "product_type": {
         "label": "Tipo de produto"
       }
+    },
+    "search": {
+      "sorting": {
+        "relevance": "Relevância",
+        "price_ascending": "Preço, baixo a alto",
+        "price_descending": "Preço, alto a baixo"
+      }
     }
   },
   "sections": {
@@ -1164,9 +1173,6 @@
       "previous": "Anterior",
       "next": "Seguinte",
       "current_page": "Página {{ current }} de {{ total }}"
-    },
-    "copyright_credit": {
-      "designer_credits_html": "Desenhado por Booster theme"
     },
     "password_page": {
       "opening_soon": "Abre brevemente",
@@ -1528,7 +1534,8 @@
       "sale_end_text": "A venda termina quando o cronômetro chega a zero!",
       "deliiver_time_text_1": "Tempo estimado de entrega",
       "deliiver_time_text_2": "dias",
-      "sticky_timer_text": "Este preço irá expirar em:"
+      "sticky_timer_text": "Este preço irá expirar em:",
+      "subscribe": "Adicionar ao Carrinho"
     },
     "dynamic_checkout_buttons": {
       "add_to_cart_text_when_dynamic_checkout_buttons_enable": "Adicionar ao carrinho"
@@ -1568,57 +1575,57 @@
   "pagefly": {
     "products": {
       "product": {
-        "regular_price": "Preço regular\n\n",
-        "sold_out": "Vendido",
-        "unavailable": "Indisponível",
-        "on_sale": "Venda",
-        "quantity": "Quantidade",
-        "add_to_cart": "Adicionar ao Carrinho",
-        "back_to_collection": "Voltar para {{title}}",
-        "view_details": "Ver detalhes"
+        "regular_price": "Regular price",
+        "sold_out": "Sold out",
+        "unavailable": "Unavailable",
+        "on_sale": "Sale",
+        "quantity": "Quantity",
+        "add_to_cart": "Add to cart",
+        "back_to_collection": "Back to {{ title }}",
+        "view_details": "View details"
       }
     },
     "article": {
-      "tags": "Tag:",
-      "all_topics": "Todos os tópicos",
-      "by_author": "por {{author }}",
-      "posted_in": "Postado em",
-      "read_more": "Consulte Mais informação",
-      "back_to_blog": "Voltar para {{title}}"
+      "tags": "Tags:",
+      "all_topics": "All topics",
+      "by_author": "by {{ author }}",
+      "posted_in": "Posted in",
+      "read_more": "Read more",
+      "back_to_blog": "Back to {{ title }}"
     },
     "comments": {
-      "title": "Deixe um comentário",
-      "name": "Nome",
-      "email": "E-mail",
-      "message": "Mensagem",
-      "post": "Postar comentário",
-      "moderated": "Observe que os comentários devem ser aprovados antes de serem publicados",
-      "success_moderated": "Seu comentário foi postado com sucesso. Vamos publicá-lo em breve, pois nosso blog é moderado.",
-      "success": "Seu comentário foi postado com sucesso! Obrigada!",
+      "title": "Leave a comment",
+      "name": "Name",
+      "email": "Email",
+      "message": "Message",
+      "post": "Post comment",
+      "moderated": "Please note, comments must be approved before they are published",
+      "success_moderated": "Your comment was posted successfully. We will publish it in a little while, as our blog is moderated.",
+      "success": "Your comment was posted successfully! Thank you!",
       "comments_with_count": {
-        "one": "{{count}} comentário",
-        "other": "{{count}} comentários"
+        "one": "{{ count }} comment",
+        "other": "{{ count }} comments"
       }
     },
     "password_page": {
-      "login_form_message": "Entre na loja usando a senha:",
-      "login_form_password_label": "Senha",
-      "login_form_password_placeholder": "Sua senha",
-      "login_form_submit": "Entrar",
-      "signup_form_email_label": "E-mail",
-      "signup_form_success": "Enviaremos um e-mail antes de abrirmos!",
-      "password_link": "Entre usando a senha"
+      "login_form_message": "Enter store using password:",
+      "login_form_password_label": "Password",
+      "login_form_password_placeholder": "Your password",
+      "login_form_submit": "Enter",
+      "signup_form_email_label": "Email",
+      "signup_form_success": "We will send you an email right before we open!",
+      "password_link": "Enter using password"
     }
   },
   "custome_block": {
     "sizechart": {
-        "title_block": "TABELA DE TAMANHO",
-        "bigger": "MAIOR",
-        "king_size": "King Size",
-        "royal_size": "Tamanho Real",
-        "puzle_pieces": "Peças de quebra-cabeças",
-        "assembly_time": "Hora da assembléia",
-        "time": "De {{time}} horas"
+      "title_block": "TABELA DE TAMANHO",
+      "bigger": "MAIOR",
+      "king_size": "King Size",
+      "royal_size": "Tamanho Real",
+      "puzle_pieces": "Peças de quebra-cabeças",
+      "assembly_time": "Hora da assembléia",
+      "time": "De {{time}} horas"
     }
   },
   "custome_text": {
